--- a/ML_HW1/KNN.ipynb
+++ b/ML_HW1/KNN.ipynb
@@ -1371,6 +1371,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ac77300",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.image as mpimg\n",
+    "img = mpimg.imread('photozoom.jpg')\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e116a42f-fae8-499c-a985-dc09e66a29b0",
    "metadata": {},
